worked on tsconfig

--- a/server/express-ts/tsconfig.json
+++ b/server/express-ts/tsconfig.json
@@ -6,11 +6,16 @@
     "rootDir": "src",
     "outDir": "dist",
 
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
+
     "esModuleInterop": true,
     "skipLibCheck": true,
 
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+
+    "moduleResolution": "node",
+    "types": ["node"]
   }
 }
